--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
     margin: 0;
     width: 800px;
     margin: 0 auto;
-    background-color: rgba(123, 46, 163);
+    background-color: rgb(87, 85, 88);
     /* background-image: url('./images/bcg.jpg'); */
     background-size:cover;
   }
@@ -26,6 +26,7 @@
     background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
     color: white;
     padding: 20px;
+    
   }
   
   .header--image {
@@ -36,6 +37,8 @@
   .header--title {
     font-size: 1.25rem;
     margin-right: auto;
+    margin-left: 30%;
+
   }
   
   .header--project {
@@ -65,6 +68,7 @@
     color: white;
     border: none;
     cursor: pointer;
+    font-size: 14px;
   }
   
   .meme {
